Update Version 3.07 Fixed Input height bug Fixed Input overlapping bottom bug Fixed endless conecting
git-svn-id: https://plugins.svn.wordpress.org/wp-live-chat-support/trunk@917830 b8457f37-d9ea-0310-8a92-e5e31aec5664

--- a/css/wplcstyle.css
+++ b/css/wplcstyle.css
@@ -10,6 +10,7 @@
     -webkit-box-sizing: border-box;
     -moz-box-sizing: border-box;
     box-sizing: border-box; 
+    height: inherit;
 }
 #wplc_chatbox {
     padding: 5px;
@@ -65,7 +66,7 @@
     border-radius: 5px 5px 0 0 ;
     color:#999;
     max-width: 250px;  
-    max-height: 360px;
+    max-height: 400px;
     z-index: 9999;
 }
 
@@ -168,6 +169,7 @@
     -webkit-box-sizing: border-box;
     -moz-box-sizing: border-box;
      box-sizing: border-box; 
+     height: inherit;
 }
 .wplc-user-message{
     display: inline-block;
